--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -3,8 +3,10 @@
 <head>
     <meta name="description" content="Techium is a digital agency">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" viewport-fit ="cover">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
+    <title>Homepage - Techium</title>
 </head>
 <body>
     <!-- Your page content goes here -->
