--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="en">
+<html lang="en" dir="ltr">
 <head>
-    <title>Homepage - Techium</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="description" content="Techium is a digital agency">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit =cover">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
+    <title>Homepage - Techium</title>
 </head>
 <body></body>
 </html>
