--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -9,14 +9,8 @@
     <title>Homepage - Techium</title>
 </head>
 <body>
-  <header>
-    <h2>Header</h2>
-  </header>
-  <main>
-    <p>Main content</p>
-  </main>
-  <footer>
-    <p>Footer</p>
-  </footer>
+  <header>Header</header>
+  <main>Main content</main>
+  <footer>Footer</footer>
 </body>
 </html>
