--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <br>
-  <!-- Headings --> 
+  <!-- Header --> 
   <header>
     <div>
       <span>Techium</span>
@@ -68,7 +68,7 @@
       </div>
     </section>
     <br>
-    About Us section 
+    <!-- About Us section --> 
     <section>
       <div>
         <header>
@@ -86,7 +86,7 @@
       </div>
     </section>
     <br>
-    Latest news section 
+    <!-- Latest news section --> 
     <section>
       <div>
         <header>
