--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -50,12 +50,12 @@
           <p>We work with you</p>
         </header>
         <div>
-          <h3>Design & Concept</h3>
-          <h3>Digital Strategy</h3>
-          <h3>Content Strategy</h3>
-          <h3>UX Design</h3>
-          <h3>Web Development</h3>
-          <h3>Social Media</h3>
+          <h3><a href="#">Design & Concept</a></h3>
+          <h3><a href="#">Digital Strategy</a></h3>
+          <h3><a href="#">Content Strategy</a></h3>
+          <h3><a href="#">UX Design</a></h3>
+          <h3><a href="#">Web Development</a></h3>
+          <h3><a href="#">Social Media</a></h3>
         </div>
       </div>
    </section>
@@ -69,13 +69,13 @@
         </header>
         <div>
           <article>
-            <h3>Interior Design</h3>
+            <h3><a href="#">Interior Design</h3>
           </article>
           <article>
-            <h3>Web Development</h3>
+            <h3><a href="#">Web Development</h3>
           </article>
           <article>
-            <h3>Personal Brand</h3>
+            <h3><a href="#">Personal Brand</h3>
           </article>
         </div>
       </div>
@@ -89,11 +89,11 @@
           <p>Everything about us</p>
         </header>
         <div>
-          <h3>Who are we</h3>
+          <h3><a href="#">Who are we</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-          <h3>Our culture</h3>
+          <h3><a href="#">Our culture</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
-          <h3>How we work</h3>
+          <h3><a href="#">How we work</a></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
         </div>
         <a href="about.html">Learn more about us</a>
