--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -29,7 +29,17 @@
         <h2>Lists</h2>
       </header>
       <div>
-        <h3></h3>
+        <h3>Unordered</h3>
+        <ul>
+          <li>Dolor pulvinar etiam magna etiam.</li>
+          <li>Sagittis adipiscing lorem eleifend.</li>
+          <li>Felis enim feugiat dolore viverra.</li>
+        </ul>
+        <ol>
+          <li>Dolor pulvinar etiam magna etiam.</li>
+          <li>Sagittis adipiscing lorem eleifend.</li>
+          <li>Felis enim feugiat dolore viverra.</li>
+        </ol>
       </div>
     </section>
     <section>
