--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -70,6 +70,17 @@
         <hr>
       </div>
     </section>
+    <br>
+    <!-- Blockquotes -->
+    <section>
+      <header>
+        <h2>Blockquotes</h2>
+      </header>
+      <div>
+        <h3>Inline quote</h3>
+        <q>Stay hungry. Stay foolish.</q>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
