--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -15,7 +15,7 @@
     <div>
       <div>
         <a href="/">
-          <span><img src="./logo-black.png"alt="Techium logo" width="160px" height="40"></span>
+          <img src="./logo-black.png"alt="Techium logo" width="160px" height="40">
         </a>
       </div>
       <nav>
@@ -178,7 +178,7 @@
   <br>
   <!-- Footer -->
     <footer>
-      <span><img src="./logo-black.png"alt="Techium logo" width="160px" height="40"></span>
+      <img src="./logo-black.png"alt="Techium logo" width="160px" height="40">
       <address>234 Washington Street <br> Urbana, Illinois</address>
       <div>
         <ul>
